--- a/templates/auth.html
+++ b/templates/auth.html
@@ -13,7 +13,7 @@
                 <h1>Bienvenue !</h1>
 
                 <div class="input-group">
-                    <input type="email" id="email" placeholder="@ Email" required>
+                    <input type="email" id="email" placeholder="Username" required>
                 </div>
 
                 <div class="input-group">
