--- a/templates/auth.html
+++ b/templates/auth.html
@@ -13,7 +13,7 @@
                 <h1>Bienvenue !</h1>
 
                 <div class="input-group">
-                    <input type="email" id="email" placeholder="Username" required>
+                    <input type="text" id="username" placeholder="Username" required> <!-- CHANGED type="email" to type="text" and id="email" to id="username" -->
                 </div>
 
                 <div class="input-group">
