implement stega ui

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="left-section">
             <div class="form-container">
-                <h1>Bienvenue !</h1>
+                <h1>Connexion</h1>
 
                 <div class="input-group">
-                    <input type="text" id="username" placeholder="Username" required> <!-- CHANGED type="email" to type="text" and id="email" to id="username" -->
+                    <input type="text" id="username" placeholder="Username" required>
                 </div>
 
                 <div class="input-group">
@@ -32,8 +32,8 @@
                 <div class="error-message" id="error-message"></div>
 
                 <div class="button-group">
-                    <button class="btn btn-primary" id="signup-btn">Sign Up</button>
-                    <button class="btn btn-secondary" id="signin-btn">Sign In</button>
+                    <button class="btn btn-primary" id="signin-btn">Sign In</button>
+                    <button class="btn btn-secondary" id="signup-btn">Sign Up</button>
                 </div>
             </div>
         </div>
