--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,10 @@
                     <span class="nav-icon">🧠</span>
                     <span class="nav-text">Algorithmes<br>de Cryptage</span>
                 </a>
+                <a href="/steganography" class="nav-item">
+                    <span class="nav-icon">🎵</span>
+                    <span class="nav-text">Stéganographie</span>
+                </a>
                 <a href="#" class="nav-item">
                     <span class="nav-icon">⚔️</span>
                     <span class="nav-text">Attaques</span>
@@ -34,7 +38,7 @@
         <main class="main-content">
             <div class="welcome-section">
                 <h1>Boîte à outils de<br>cryptographie classique et<br>méthodes d'attaque</h1>
-                <p class="user-info">Connecté en tant que: <strong>{{ user.email }}</strong></p>
+                <p class="user-info">Connecté en tant que: <strong>{{ user.username }}</strong></p>
             </div>
         </main>
     </div>
