--- a/templates/landing.html
+++ b/templates/landing.html
@@ -15,10 +15,7 @@
 
             <div class="button-group">
                 <button class="btn btn-primary" onclick="window.location.href='/auth'">
-                    Sign In
-                </button>
-                <button class="btn btn-secondary" onclick="window.location.href='/auth'">
-                    Sign Up
+                    Commencer
                 </button>
             </div>
         </div>
