--- a/templates/messages.html
+++ b/templates/messages.html
@@ -20,6 +20,10 @@
                     <span class="nav-icon">🧠</span>
                     <span class="nav-text">Algorithmes<br>de Cryptage</span>
                 </a>
+                <a href="/steganography" class="nav-item">
+                    <span class="nav-icon">🎵</span>
+                    <span class="nav-text">Stéganographie</span>
+                </a>
             </nav>
 
             <div class="sidebar-footer">
