--- a/templates/algorithms.html
+++ b/templates/algorithms.html
@@ -20,6 +20,10 @@
                     <span class="nav-icon">🧠</span>
                     <span class="nav-text">Algorithmes<br>de Cryptage</span>
                 </a>
+                <a href="/steganography" class="nav-item">
+                    <span class="nav-icon">🎵</span>
+                    <span class="nav-text">Stéganographie</span>
+                </a>
                 <a href="#" class="nav-item">
                     <span class="nav-icon">⚔️</span>
                     <span class="nav-text">Attaques</span>
