--- a/templates/steganography.html
+++ b/templates/steganography.html
@@ -146,6 +146,10 @@
                     <span class="nav-icon">🎵</span>
                     <span class="nav-text">Stéganographie</span>
                 </a>
+                <a href="{{ url_for('attack_page') }}" class="nav-item">
+                     <span class="nav-icon">⚔️</span>
+                     <span class="nav-text">Attaques</span>
+                 </a>
             </nav>
 
             <div class="sidebar-footer">
