--- a/templates/algorithms.html
+++ b/templates/algorithms.html
@@ -24,10 +24,10 @@
                     <span class="nav-icon">🎵</span>
                     <span class="nav-text">Stéganographie</span>
                 </a>
-                <a href="#" class="nav-item">
-                    <span class="nav-icon">⚔️</span>
-                    <span class="nav-text">Attaques</span>
-                </a>
+                <a href="{{ url_for('attack_page') }}" class="nav-item">
+                     <span class="nav-icon">⚔️</span>
+                     <span class="nav-text">Attaques</span>
+                 </a>
             </nav>
         </aside>
 
