--- a/templates/steganography.html
+++ b/templates/steganography.html
@@ -146,7 +146,7 @@
                     <span class="nav-icon">🎵</span>
                     <span class="nav-text">Stéganographie</span>
                 </a>
-                <a href="{{ url_for('attack_page') }}" class="nav-item">
+                <a href=# class="nav-item">
                      <span class="nav-icon">⚔️</span>
                      <span class="nav-text">Attaques</span>
                  </a>
